# antrust

./: .gitignore  README.md
rust/: Cargo.toml
rust/ant-backend/: Cargo.toml
rust/ant-backend/src/: compile_memo.rs  lib.rs
rust/ant-bench/: Cargo.toml
rust/ant-bench/benches/: parse.rs  runtime.rs
rust/ant-cli/: Cargo.toml
rust/ant-cli/src/: main.rs
rust/ant-cli/tests/: goldens.rs
rust/ant-frontend/: Cargo.toml
rust/ant-frontend/src/: lib.rs
rust/ant-runtime/: Cargo.toml
rust/ant-runtime/src/: dependency.rs  lib.rs  memo.rs  pattern.rs  reference.rs  state.rs  value.rs  word.rs  words.rs
rust/ant-runtime/tests/: memo_parity.rs
rust/ant-transform/: Cargo.toml
rust/ant-transform/src/: lib.rs
rust/ant-typing/: Cargo.toml
rust/ant-typing/src/: lib.rs
rust/goldens/: manifest.json
rust/goldens/cases/Ctx/: print-ast.txt  typing.txt
rust/goldens/cases/DefuncRecGroup/: print-ast.txt  print-cps-defunc.txt  print-defunc.txt  typing.txt
rust/goldens/cases/DefuncRecSingle/: print-ast.txt  typing.txt  (+2 more)
rust/goldens/errors/: compile-plain-error.stderr  compile-seq-error.stderr  keyword-identifier-error.stderr  lexing-error.stderr  missing-in-error.stderr  missing-paren-error.stderr  syntax-error.stderr  transform-error.stderr  truncated-let-error.stderr  typing-error.stdout  unknown-flag.stderr
rust/goldens/inputs/: compile-plain-error.ant  compile-seq-error.ant  keyword-identifier-error.ant  missing-in-error.ant  missing-paren-error.ant  transform-error.ant  truncated-let-error.ant  typing-error.ant
rust/goldens/runtime/: memo_parity.stdout
(+132 files in other folders)
