[workspace]
members = [
  "ant-cli",
  "ant-frontend",
  "ant-typing",
  "ant-transform",
  "ant-runtime",
  "ant-backend",
  "ant-bench",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
criterion = "0.5"
insta = "1"
logos = "0.14"
crc32c = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
