[package]
name = "ant-bench"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
criterion = { workspace = true }

[dependencies.ant-frontend]
path = "../ant-frontend"

[dependencies.ant-runtime]
path = "../ant-runtime"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "runtime"
harness = false
